added tests to NumberReceiverFacadeTest refactored NumberReceiverFacade
added tests to ResultCheckerFacadeTest