@@ -5,8 +5,9 @@ import pl.lotto.numbergenerator.WinningNumbersGeneratorFacade;
 import pl.lotto.numberreceiver.NumberReceiverFacade;
 import pl.lotto.numberreceiver.dto.TicketDto;
 import pl.lotto.resultchecker.dto.WinnerDto;
+import pl.lotto.resultchecker.dto.WinnersDto;
 
-import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -16,38 +17,43 @@ public class ResultCheckerFacade {
 
     WinningNumbersGeneratorFacade generator;
     NumberReceiverFacade receiver;
+//    WinnersRepository winnersRepository;
 
-    public WinnerDto generateResult(String hash) {
+    public WinnersDto generateWinners() {
+        LocalDateTime drawDate = receiver.nextDrawDate();
+        List<TicketDto> allTicketsByDate = receiver.getAllTicketsByDate(drawDate);
         Set<Integer> winningNumbers = generator.generateWinningNumbers().getWinningNumbers();
-        Set<Integer> usersNumbers = receiver.getTicketByHash(hash).getNumbers();
-        Set<Integer> matchingNumbers = retrieveMatchingNumbers(winningNumbers, usersNumbers);
-        return WinnerDto.builder()
-                .hash(hash)
-                .numbers(matchingNumbers)
-                .drawDate(receiver.getTicketByHash(hash).getDrawDate())
-                .build();
-    }
 
-    private Set<Integer> retrieveMatchingNumbers(Set<Integer> winningNumbers, Set<Integer> usersNumbers) {
-        return usersNumbers.stream()
-                .filter(winningNumbers::contains)
-                .collect(Collectors.toSet());
-    }
-
-    public List<WinnerDto> generateWinners() {
-        List<TicketDto> allTicketsByDate = receiver.getAllTicketsByDate(LocalDate.now());
-        Set<Integer> winningNumbers = generator.generateWinningNumbers().getWinningNumbers();
-        return createWinners(allTicketsByDate, winningNumbers);
-    }
-
-    private List<WinnerDto> createWinners(List<TicketDto> allTicketsByDate, Set<Integer> winningNumbers) {
-        return allTicketsByDate.stream()
+        List<WinnerDto> winnersDto = allTicketsByDate.stream()
                 .filter(ticketDto -> ticketDto.getNumbers().containsAll(winningNumbers))
                 .map(ticketDto -> WinnerDto.builder()
                         .hash(ticketDto.getHash())
                         .numbers(ticketDto.getNumbers())
                         .drawDate(ticketDto.getDrawDate())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
+//        winnersRepository.saveAll(winnersDto);
+
+        return WinnersDto.builder()
+                .winners(winnersDto)
+                .build();
     }
+
+    public WinnerDto generateResult(String hash) {
+        TicketDto ticketDto = receiver.findByHash(hash);
+        Set<Integer> winningNumbers = generator.generateWinningNumbers().getWinningNumbers();
+        Set<Integer> matchingNumbers = ticketDto.getNumbers().stream().
+                filter(winningNumbers::contains)
+                .collect(Collectors.toSet());
+
+        return WinnerDto.builder()
+                .hash(hash)
+                .numbers(matchingNumbers)
+                .drawDate(ticketDto.getDrawDate())
+                .build();
+
+        //TODO: Nie ogarniam czy to tak ma wyglądać
+
+    }
+
 }
